<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailActivity">

    <TextView
        android:id="@+id/user_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/user_detail_activity_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="@dimen/tv_detail_weather_margin"/>

    <TextView
        android:id="@+id/tv_temp_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_message"
        android:text="@string/temp_lbl"
        android:layout_margin="@dimen/tv_detail_weather_margin"/>

    <TextView
        android:id="@+id/tv_temp_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tv_temp_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_message"
        android:layout_margin="@dimen/tv_detail_weather_margin"
        tools:text="@string/test_text" />

    <TextView
        android:id="@+id/tv_pressure_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_temp_label"
        android:layout_margin="@dimen/tv_detail_weather_margin"
        android:text="@string/pressure_lbl" />

    <TextView
        android:id="@+id/tv_pressure_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tv_pressure_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_temp_value"
        android:layout_margin="@dimen/tv_detail_weather_margin"
        tools:text="@string/test_text" />

    <TextView
        android:id="@+id/tv_humidity_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_pressure_label"
        android:layout_margin="@dimen/tv_detail_weather_margin"
        android:text="@string/humidity_lbl" />

    <TextView
        android:id="@+id/tv_humidity_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tv_humidity_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_pressure_value"
        android:layout_margin="@dimen/tv_detail_weather_margin"
        tools:text="@string/test_text" />


    <TextView
        android:id="@+id/user_message_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/test_text"
        android:text="@string/tv_user_message_2"
        app:layout_constraintTop_toBottomOf="@id/tv_humidity_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textStyle="bold|italic"
        android:gravity="center"
        android:layout_margin="@dimen/tv_detail_weather_margin"/>

</android.support.constraint.ConstraintLayout>